chore: Add unit tests for missing branches