@@ -15,7 +15,9 @@ import io.quarkus.test.junit.QuarkusTest;
 import io.swagger.parser.OpenAPIParser;
 import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.PathItem;
+import io.swagger.v3.oas.models.headers.Header;
 import io.swagger.v3.oas.models.media.Schema;
+import io.swagger.v3.oas.models.parameters.Parameter;
 import io.swagger.v3.parser.core.models.ParseOptions;
 import jakarta.inject.Inject;
 import org.assertj.core.api.Assertions;
@@ -72,9 +74,9 @@ class FuzzingDataFactoryTest {
         List<FuzzingData> data = setupFuzzingData("/variant", "src/test/resources/issue_69.yml");
         Assertions.assertThat(data).hasSize(1);
 
-        List<String> responses = data.get(0).getResponses().get("200");
+        List<String> responses = data.getFirst().getResponses().get("200");
         Assertions.assertThat(responses).hasSize(2);
-        Assertions.assertThat(responses.get(0)).doesNotContain("Variant").contains("option1");
+        Assertions.assertThat(responses.getFirst()).doesNotContain("Variant").contains("option1");
         Assertions.assertThat(responses.get(1)).doesNotContain("Variant").contains("option2");
     }
 
@@ -95,7 +97,7 @@ class FuzzingDataFactoryTest {
 
         Assertions.assertThat(data).hasSizeGreaterThanOrEqualTo(2);
 
-        Assertions.assertThat(data.get(0).getPayload()).doesNotContain("ONE_OF", "ANY_OF");
+        Assertions.assertThat(data.getFirst().getPayload()).doesNotContain("ONE_OF", "ANY_OF");
         Assertions.assertThat(data.get(1).getPayload()).doesNotContain("ONE_OF", "ANY_OF");
     }
 
@@ -104,22 +106,22 @@ class FuzzingDataFactoryTest {
         List<FuzzingData> data = setupFuzzingData("/path1", "src/test/resources/oneOf_with_null_additional.yml");
         Assertions.assertThat(data).hasSize(1);
 
-        Assertions.assertThat(data.get(0).getPayload()).contains("dateFrom");
-        Assertions.assertThat(data.get(0).getPayload()).doesNotContain("ONE_OF", "ANY_OF");
+        Assertions.assertThat(data.getFirst().getPayload()).contains("dateFrom");
+        Assertions.assertThat(data.getFirst().getPayload()).doesNotContain("ONE_OF", "ANY_OF");
     }
 
     @Test
     void shouldNotGenerateRequestBodyWhenPostButSchemaEmpty() throws Exception {
         List<FuzzingData> data = setupFuzzingData("/pets", "src/test/resources/petstore_empty_body.json");
         Assertions.assertThat(data).hasSize(1);
-        Assertions.assertThat(data.get(0).getMethod()).isEqualTo(HttpMethod.GET);
+        Assertions.assertThat(data.getFirst().getMethod()).isEqualTo(HttpMethod.GET);
     }
 
     @Test
     void shouldLoadExamples() throws Exception {
         List<FuzzingData> data = setupFuzzingData("/pets", "src/test/resources/petstore.yml");
-        Assertions.assertThat(data.get(0).getExamples()).hasSize(2);
-        Assertions.assertThat(data.get(0).getExamples())
+        Assertions.assertThat(data.getFirst().getExamples()).hasSize(2);
+        Assertions.assertThat(data.getFirst().getExamples())
                 .anyMatch(example -> example.contains("dog-example"))
                 .anyMatch(example -> example.contains("dog-no-ref"));
     }
@@ -129,7 +131,7 @@ class FuzzingDataFactoryTest {
         List<FuzzingData> data = setupFuzzingData("/api/some-endpoint", "src/test/resources/issue66.yml");
         Assertions.assertThat(data).hasSize(2);
         Assertions.assertThat(data.get(1).getPayload()).contains("someSubObjectKey3");
-        Assertions.assertThat(data.get(0).getPayload()).doesNotContain("someSubObjectKey3");
+        Assertions.assertThat(data.getFirst().getPayload()).doesNotContain("someSubObjectKey3");
     }
 
     @Test
@@ -152,7 +154,7 @@ class FuzzingDataFactoryTest {
         List<FuzzingData> data = setupFuzzingData("/path1", "src/test/resources/oneOf_with_base_class.yml");
         Assertions.assertThat(data).hasSize(2);
 
-        String firstPayload = data.get(0).getPayload();
+        String firstPayload = data.getFirst().getPayload();
         Object type = JsonUtils.getVariableFromJson(firstPayload, "$.payload.type");
         Object innerPayload = JsonUtils.getVariableFromJson(firstPayload, "$.payload.payload");
 
@@ -165,7 +167,7 @@ class FuzzingDataFactoryTest {
         List<FuzzingData> data = setupFuzzingData("/pets", "src/test/resources/allof-with-required-in-root.yml");
 
         Assertions.assertThat(data).hasSize(1);
-        FuzzingData fuzzingData = data.get(0);
+        FuzzingData fuzzingData = data.getFirst();
         Assertions.assertThat(fuzzingData.getAllRequiredFields()).containsExactly("breed", "id").doesNotContain("color");
     }
 
@@ -174,36 +176,36 @@ class FuzzingDataFactoryTest {
         List<FuzzingData> data = setupFuzzingData("/pets", "src/test/resources/allof-with-required-for-both-schemas.yml");
 
         Assertions.assertThat(data).hasSize(1);
-        FuzzingData fuzzingData = data.get(0);
+        FuzzingData fuzzingData = data.getFirst();
         Assertions.assertThat(fuzzingData.getAllRequiredFields()).containsExactly("legs", "breed", "id").doesNotContain("color");
     }
 
     @Test
     void shouldLoadExample() throws Exception {
         List<FuzzingData> data = setupFuzzingData("/pet-types-rec", "src/test/resources/petstore.yml");
-        Assertions.assertThat(data.get(0).getExamples()).hasSize(1);
-        Assertions.assertThat(data.get(0).getExamples()).anyMatch(example -> example.contains("dog-simple-example"));
+        Assertions.assertThat(data.getFirst().getExamples()).hasSize(1);
+        Assertions.assertThat(data.getFirst().getExamples()).anyMatch(example -> example.contains("dog-simple-example"));
     }
 
     @Test
     void shouldCreateFuzzingDataForEmptyPut() throws Exception {
         List<FuzzingData> data = setupFuzzingData("/pets/{id}", "src/test/resources/petstore-empty.yml");
         Assertions.assertThat(data).hasSize(1);
-        Assertions.assertThat(data.get(0).getMethod()).isEqualByComparingTo(HttpMethod.PUT);
+        Assertions.assertThat(data.getFirst().getMethod()).isEqualByComparingTo(HttpMethod.PUT);
     }
 
     @Test
     void shouldUseExamplesForPathParams() throws Exception {
         List<FuzzingData> data = setupFuzzingData("/pets/{id}", "src/test/resources/petstore.yml");
         Assertions.assertThat(data).hasSize(1);
-        Assertions.assertThat(data.get(0).getPayload()).contains("78").contains("test");
+        Assertions.assertThat(data.getFirst().getPayload()).contains("78").contains("test");
     }
 
     @Test
     void shouldNotIncludeReadOnlyFields() throws Exception {
         List<FuzzingData> data = setupFuzzingData("/pets", "src/test/resources/petstore-readonly.yml");
         Assertions.assertThat(data).hasSize(2);
-        FuzzingData postData = data.get(0);
+        FuzzingData postData = data.getFirst();
         Assertions.assertThat(postData.getPayload()).doesNotContain("id", "details").contains("age", "data", "name");
 
         Set<String> allFields = postData.getAllFieldsByHttpMethod();
@@ -211,10 +213,14 @@ class FuzzingDataFactoryTest {
     }
 
     private List<FuzzingData> setupFuzzingData(String path, String contract) throws IOException {
+        return this.setupFuzzingData(path, contract, true);
+    }
+
+    private List<FuzzingData> setupFuzzingData(String path, String contract, boolean resolve) throws IOException {
         OpenAPIParser openAPIV3Parser = new OpenAPIParser();
         ParseOptions options = new ParseOptions();
-        options.setResolve(true);
-        options.setFlatten(true);
+        options.setResolve(resolve);
+        options.setFlatten(resolve);
 
         OpenAPI openAPI = openAPIV3Parser.readContents(Files.readString(Paths.get(contract)), null, options).getOpenAPI();
         Map<String, Schema> schemas = OpenApiUtils.getSchemas(openAPI, List.of("application\\/.*\\+?json"));
@@ -234,7 +240,7 @@ class FuzzingDataFactoryTest {
     void shouldCorrectlyParseRefOneOf() throws Exception {
         List<FuzzingData> dataList = setupFuzzingData("/pet-types", "src/test/resources/petstore.yml");
         Assertions.assertThat(dataList).hasSize(2);
-        Assertions.assertThat(dataList.get(0).getPayload()).contains("\"petType\":{\"breedType\":\"Husky");
+        Assertions.assertThat(dataList.getFirst().getPayload()).contains("\"petType\":{\"breedType\":\"Husky");
         Assertions.assertThat(dataList.get(1).getPayload()).contains("\"petType\":{\"breedType\":\"Labrador");
     }
 
@@ -258,7 +264,7 @@ class FuzzingDataFactoryTest {
         Assertions.assertThat(dataList).hasSize(3);
         Assertions.assertThat(dataList.stream().map(FuzzingData::getPayload).toList())
                 .noneMatch(payload -> payload.contains("ANY_OF") || payload.contains("ONE_OF") || payload.contains("ALL_OF"));
-        FuzzingData firstData = dataList.get(0);
+        FuzzingData firstData = dataList.getFirst();
         Assertions.assertThat(firstData.getPayload()).doesNotContain("ANY_OF", "ONE_OF", "ALL_OF");
         String keyWithSquares = String.valueOf(JsonUtils.getVariableFromJson(firstData.getPayload(), "$.primaryDate"));
 
@@ -300,7 +306,7 @@ class FuzzingDataFactoryTest {
                 .filteredOn(payload -> payload.contains("ANY_OF") || payload.contains("ONE_OF") || payload.contains("ALL_OF"))
                 .hasSize(1);
 
-        FuzzingData firstData = dataList.get(0);
+        FuzzingData firstData = dataList.getFirst();
         boolean isActionsArray = JsonUtils.isArray(firstData.getPayload(), "$.CreateStudy.completion_codes[0].actions");
         Assertions.assertThat(isActionsArray).isTrue();
     }
@@ -315,7 +321,7 @@ class FuzzingDataFactoryTest {
                 .filteredOn(payload -> payload.contains("ANY_OF") || payload.contains("ONE_OF") || payload.contains("ALL_OF"))
                 .hasSize(3);
 
-        FuzzingData firstData = dataList.get(0);
+        FuzzingData firstData = dataList.getFirst();
         boolean isActionsArray = JsonUtils.isArray(firstData.getPayload(), "$.subject-profile.claims");
         Assertions.assertThat(isActionsArray).isTrue();
     }
@@ -349,7 +355,7 @@ class FuzzingDataFactoryTest {
         FuzzingData firstData = dataList.get(1);
         boolean firstDataIsArray = JsonUtils.isArray(firstData.getPayload(), "$.contribution.value");
 
-        FuzzingData zeroData = dataList.get(0);
+        FuzzingData zeroData = dataList.getFirst();
         boolean zeroDataIsNotArray = JsonUtils.isArray(zeroData.getPayload(), "$.contribution.value");
 
         Assertions.assertThat(firstDataIsArray).isTrue();
@@ -363,7 +369,7 @@ class FuzzingDataFactoryTest {
         Assertions.assertThat(dataList).hasSize(11);
         Assertions.assertThat(dataList.stream().map(FuzzingData::getPayload).toList())
                 .noneMatch(payload -> payload.contains("ANY_OF") || payload.contains("ONE_OF") || payload.contains("ALL_OF"));
-        FuzzingData firstData = dataList.get(0);
+        FuzzingData firstData = dataList.getFirst();
         Assertions.assertThat(firstData.getPayload()).doesNotContain("ANY_OF", "ONE_OF", "ALL_OF");
         Object creditorNotExistent = JsonUtils.getVariableFromJson(firstData.getPayload(), "$.initiation.creditor.creditor");
         String bicValue = String.valueOf(JsonUtils.getVariableFromJson(firstData.getPayload(), "$.initiation.creditor.sortCode"));
@@ -377,7 +383,7 @@ class FuzzingDataFactoryTest {
         List<FuzzingData> dataList = setupFuzzingData("/pets-batch", "src/test/resources/petstore.yml");
 
         Assertions.assertThat(dataList).hasSize(2);
-        FuzzingData firstData = dataList.get(0);
+        FuzzingData firstData = dataList.getFirst();
         Assertions.assertThat(firstData.getPayload()).doesNotContain("ANY_OF", "ONE_OF", "ALL_OF");
         Assertions.assertThat(JsonParser.parseString(firstData.getPayload()).isJsonArray()).isTrue();
     }
@@ -389,7 +395,7 @@ class FuzzingDataFactoryTest {
         List<FuzzingData> dataList = setupFuzzingData("/v2/account/keys", "src/test/resources/digitalocean.yaml");
 
         Assertions.assertThat(dataList).hasSize(2);
-        FuzzingData firstData = dataList.get(0);
+        FuzzingData firstData = dataList.getFirst();
         Assertions.assertThat(firstData.getPayload()).contains("public_key", "name").doesNotContain("fingerprint", "id");
         Assertions.assertThat(firstData.getReqSchemaName()).isEqualTo("#/paths/~1v2~1account~1keys/get/responses/200/content/application~1json/schema/allOf/0/properties/ssh_keys/items");
         Assertions.assertThat(firstData.getResponseContentTypes().values()).allMatch(contentTypes -> contentTypes.contains("application/json")).allMatch(contentTypes -> contentTypes.size() == 1);
@@ -403,7 +409,7 @@ class FuzzingDataFactoryTest {
         List<FuzzingData> dataList = setupFuzzingData("/v2/account/keys/{ssh_key_identifier}", "src/test/resources/digitalocean.yaml");
 
         Assertions.assertThat(dataList).hasSize(4);
-        FuzzingData firstData = dataList.get(0);
+        FuzzingData firstData = dataList.getFirst();
         Assertions.assertThat(firstData.getPayload()).contains("name");
         Assertions.assertThat(firstData.getMethod()).isEqualByComparingTo(HttpMethod.PUT);
     }
@@ -415,11 +421,37 @@ class FuzzingDataFactoryTest {
         List<FuzzingData> dataList = setupFuzzingData("/v2/actions", "src/test/resources/digitalocean.yaml");
 
         Assertions.assertThat(dataList).hasSize(1);
-        FuzzingData firstData = dataList.get(0);
+        FuzzingData firstData = dataList.getFirst();
         Assertions.assertThat(firstData.getResponses()).hasSize(5);
-        String response200 = firstData.getResponses().get("200").get(0);
+        String response200 = firstData.getResponses().get("200").getFirst();
         Assertions.assertThat(response200).contains("region_slug", "resource_id", "resource_type");
         Assertions.assertThat(firstData.getMethod()).isEqualByComparingTo(HttpMethod.GET);
+
+        Object parameter = catsGlobalContext.getObjectFromPathsReference("#/paths/~1v2~1account~1keys~1%7Bssh_key_identifier%7D/get/parameters/0");
+        Assertions.assertThat(parameter).isNotNull();
+        Assertions.assertThat(parameter).isInstanceOf(Parameter.class);
+    }
+
+    @Test
+    void shouldGenerateCrossPathReferenceHeaders() throws Exception {
+        Mockito.when(processingArguments.getSelfReferenceDepth()).thenReturn(5);
+
+        List<FuzzingData> dataList = setupFuzzingData("/v2/1-clicks", "src/test/resources/digitalocean.yaml", false);
+
+        Assertions.assertThat(dataList).hasSize(1);
+        FuzzingData firstData = dataList.getFirst();
+        Assertions.assertThat(firstData.getResponses()).hasSize(5);
+        Assertions.assertThat(firstData.getMethod()).isEqualByComparingTo(HttpMethod.GET);
+
+        Set<String> response200 = firstData.getResponseHeaders().get("200");
+        Assertions.assertThat(response200).containsOnly("ratelimit-limit", "ratelimit-remaining", "ratelimit-reset");
+
+        Set<String> response401 = firstData.getResponseHeaders().get("401");
+        Assertions.assertThat(response401).containsOnly("ratelimit-limit", "ratelimit-remaining", "ratelimit-reset");
+
+        Object header = catsGlobalContext.getObjectFromPathsReference("#/paths/~1v2~11-clicks/get/responses/200/headers/ratelimit-limit");
+        Assertions.assertThat(header).isNotNull();
+        Assertions.assertThat(header).isInstanceOf(Header.class);
     }
 
     @Test
@@ -430,12 +462,12 @@ class FuzzingDataFactoryTest {
         List<FuzzingData> dataList = setupFuzzingData("/comments", "src/test/resources/sellsy.yaml");
 
         Assertions.assertThat(dataList).hasSize(3);
-        FuzzingData firstData = dataList.get(0);
+        FuzzingData firstData = dataList.getFirst();
         Assertions.assertThat(firstData.getResponses()).hasSize(2);
-        String response201 = firstData.getResponses().get("201").get(0);
+        String response201 = firstData.getResponses().get("201").getFirst();
         Assertions.assertThat(response201).contains("facebook", "twitter", "business_segment");
         Assertions.assertThat(firstData.getMethod()).isEqualByComparingTo(HttpMethod.POST);
-        String response204 = firstData.getResponses().get("204").get(0);
+        String response204 = firstData.getResponses().get("204").getFirst();
         Assertions.assertThat(response204).isEqualTo("null");
     }
 
@@ -447,7 +479,7 @@ class FuzzingDataFactoryTest {
         List<FuzzingData> dataList = setupFuzzingData("/pets", "src/test/resources/petstore-deprecated-tags.yml");
 
         Assertions.assertThat(dataList).hasSize(4);
-        Assertions.assertThat(dataList.get(0).getMethod()).isEqualTo(HttpMethod.POST);
+        Assertions.assertThat(dataList.getFirst().getMethod()).isEqualTo(HttpMethod.POST);
         Assertions.assertThat(dataList.get(1).getMethod()).isEqualTo(HttpMethod.POST);
         Assertions.assertThat(dataList.get(2).getMethod()).isEqualTo(HttpMethod.GET);
         Assertions.assertThat(dataList.get(3).getMethod()).isEqualTo(HttpMethod.DELETE);
@@ -455,7 +487,7 @@ class FuzzingDataFactoryTest {
         Mockito.when(filterArguments.isSkipDeprecated()).thenReturn(true);
         List<FuzzingData> secondTimeFuzzDataList = setupFuzzingData("/pets", "src/test/resources/petstore-deprecated-tags.yml");
         Assertions.assertThat(secondTimeFuzzDataList).hasSize(1);
-        Assertions.assertThat(secondTimeFuzzDataList.get(0).getMethod()).isEqualTo(HttpMethod.GET);
+        Assertions.assertThat(secondTimeFuzzDataList.getFirst().getMethod()).isEqualTo(HttpMethod.GET);
     }
 
     @Test
@@ -464,7 +496,7 @@ class FuzzingDataFactoryTest {
         List<FuzzingData> dataList = setupFuzzingData("/pets", "src/test/resources/petstore-deprecated-tags.yml");
 
         Assertions.assertThat(dataList).hasSize(2);
-        Assertions.assertThat(dataList.get(0).getMethod()).isEqualTo(HttpMethod.GET);
+        Assertions.assertThat(dataList.getFirst().getMethod()).isEqualTo(HttpMethod.GET);
         Assertions.assertThat(dataList.get(1).getMethod()).isEqualTo(HttpMethod.DELETE);
     }
 
@@ -474,7 +506,7 @@ class FuzzingDataFactoryTest {
         List<FuzzingData> dataList = setupFuzzingData("/pets", "src/test/resources/petstore-deprecated-tags.yml");
 
         Assertions.assertThat(dataList).hasSize(2);
-        Assertions.assertThat(dataList.get(0).getMethod()).isEqualTo(HttpMethod.POST);
+        Assertions.assertThat(dataList.getFirst().getMethod()).isEqualTo(HttpMethod.POST);
         Assertions.assertThat(dataList.get(1).getMethod()).isEqualTo(HttpMethod.POST);
     }
 
@@ -485,11 +517,11 @@ class FuzzingDataFactoryTest {
         Assertions.assertThat(dataList).hasSize(5);
         Assertions.assertThat(dataList.stream().map(FuzzingData::getPayload).toList())
                 .noneMatch(payload -> payload.contains("ANY_OF") || payload.contains("ONE_OF") || payload.contains("ALL_OF"));
-        FuzzingData firstData = dataList.get(0);
+        FuzzingData firstData = dataList.getFirst();
         Assertions.assertThat(firstData.getPayload()).doesNotContain("ANY_OF", "ONE_OF", "ALL_OF");
-        List<String> responses = dataList.get(0).getResponses().get("422");
+        List<String> responses = dataList.getFirst().getResponses().get("422");
         Assertions.assertThat(responses).hasSize(2);
-        String responsePayload = responses.get(0);
+        String responsePayload = responses.getFirst();
         Assertions.assertThat(responsePayload).doesNotContain("ANY_OF", "ONE_OF", "ALL_OF").contains("loc");
     }
 
@@ -504,10 +536,10 @@ class FuzzingDataFactoryTest {
     void shouldGenerateValidResponseForOneOfNestedCombinations() throws Exception {
         List<FuzzingData> dataList = setupFuzzingData("/api/groops/{groopId}/StartGroopitPaging", "src/test/resources/nswag_gen_oneof.json");
         Assertions.assertThat(dataList).hasSize(1);
-        FuzzingData firstData = dataList.get(0);
+        FuzzingData firstData = dataList.getFirst();
         Assertions.assertThat(firstData.getPayload()).doesNotContain("ANY_OF", "ONE_OF", "ALL_OF");
         Assertions.assertThat(firstData.getResponses().get("200")).hasSize(9);
-        String firstResponse = firstData.getResponses().get("200").get(0);
+        String firstResponse = firstData.getResponses().get("200").getFirst();
         Assertions.assertThat(firstResponse).doesNotContain("ANY_OF", "ONE_OF", "ALL_OF");
     }
 
@@ -515,10 +547,10 @@ class FuzzingDataFactoryTest {
     void shouldGenerateValidDataWhenPrimitiveArrays() throws Exception {
         List<FuzzingData> dataList = setupFuzzingData("/pets", "src/test/resources/issue94.json");
         Assertions.assertThat(dataList).hasSize(2);
-        FuzzingData firstData = dataList.get(0);
+        FuzzingData firstData = dataList.getFirst();
         Map<String, List<String>> responses = firstData.getResponses();
         Assertions.assertThat(responses).hasSize(2);
-        String defaultResponses = responses.get("default").get(0);
+        String defaultResponses = responses.get("default").getFirst();
         boolean isArray = JsonUtils.isArray(defaultResponses, "$.code");
         Assertions.assertThat(isArray).isTrue();
     }
@@ -537,6 +569,15 @@ class FuzzingDataFactoryTest {
     }
 
     @Test
+    void shouldGetPathItemFromReference() throws Exception {
+        List<FuzzingData> dataList = setupFuzzingData("/reference-pets", "src/test/resources/petstore.yml", false);
+        Assertions.assertThat(dataList).hasSize(1);
+        FuzzingData data = dataList.getFirst();
+        Assertions.assertThat(data.getMethod()).isEqualByComparingTo(HttpMethod.GET);
+        Assertions.assertThat(data.getPayload()).contains("id", "page");
+    }
+
+    @Test
     void shouldThrowExceptionWhenSchemeDoesNotExist() {
         Assertions.assertThatThrownBy(() -> setupFuzzingData("/pet-types", "src/test/resources/petstore-no-schema.yml")).isInstanceOf(IllegalArgumentException.class);
     }
@@ -545,7 +586,7 @@ class FuzzingDataFactoryTest {
     void shouldGetAllFieldsWhenSchemaDoesNotExist() throws Exception {
         List<FuzzingData> dataList = setupFuzzingData("/rest/1/pdf/", "src/test/resources/issue98.json");
         Assertions.assertThat(dataList).hasSize(1);
-        FuzzingData data = dataList.get(0);
+        FuzzingData data = dataList.getFirst();
         Set<CatsField> fields = data.getAllFieldsAsCatsFields();
         Assertions.assertThat(fields).hasSize(4);
     }
@@ -554,7 +595,7 @@ class FuzzingDataFactoryTest {
     void shouldDetectCyclicDependenciesWhenPropertiesNamesDontMatch() throws Exception {
         List<FuzzingData> dataList = setupFuzzingData("/pets", "src/test/resources/issue117.json");
         Assertions.assertThat(dataList).hasSize(2);
-        FuzzingData data = dataList.get(0);
+        FuzzingData data = dataList.getFirst();
         String var1 = String.valueOf(JsonUtils.getVariableFromJson(data.getPayload(), "$.credentialSource.updatedBy.credentialSource"));
         Object var2 = JsonUtils.getVariableFromJson(data.getPayload(), "$.credentialSource.updatedBy.credentialSource.updatedBy");
         Assertions.assertThat(var1).isNotEqualTo("NOT_SET");
@@ -566,7 +607,7 @@ class FuzzingDataFactoryTest {
         Mockito.when(processingArguments.getSelfReferenceDepth()).thenReturn(5);
         List<FuzzingData> dataList = setupFuzzingData("/pets", "src/test/resources/issue117.json");
         Assertions.assertThat(dataList).hasSize(2);
-        FuzzingData data = dataList.get(0);
+        FuzzingData data = dataList.getFirst();
         String var1 = String.valueOf(JsonUtils.getVariableFromJson(data.getPayload(), "$.credentialSource.updatedBy.credentialSource.updatedBy.credentialSource.updatedBy.credentialSource"));
         Object var2 = JsonUtils.getVariableFromJson(data.getPayload(), "$.credentialSource.updatedBy.credentialSource.updatedBy.credentialSource.updatedBy.credentialSource.updatedBy.credentialSource");
         Assertions.assertThat(var1).isNotEqualTo("NOT_SET");
@@ -578,7 +619,7 @@ class FuzzingDataFactoryTest {
         System.getProperties().setProperty("bind-type", "true");
         List<FuzzingData> dataList = setupFuzzingData("/pet", "src/test/resources/petstore31.yaml");
         Assertions.assertThat(dataList).hasSize(2);
-        FuzzingData data = dataList.get(0);
+        FuzzingData data = dataList.getFirst();
         List<String> fields = data.getAllFieldsAsCatsFields().stream().map(CatsField::getName).toList();
         Assertions.assertThat(fields).containsExactly("status",
                 "legs",
